@@ -1,3 +1,6 @@
+[B]2.0.0[/B]
+- Complete addon rework
+
 [B]1.3.0[/B]
 - Fixed parsing of TV Shows, Latest, Archive and Recommended episodes
 - Updated liveresolver
